광고 랜딩페이지 어드민, 사용자랜딩페이지 연결, 관리자 랜딩 페이지네이션

--- a/public/css/admin_common.css
+++ b/public/css/admin_common.css
@@ -97,6 +97,12 @@ div{
     background-color: #fff;
     border-radius: 10px;
 }
+.board-search-contents ul {
+    padding: 20px;
+}
+.board-search-contents dt{
+    font-size: 14px;
+}
 
 .board-contents table td{
     padding: 10px;
